--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -17,6 +17,7 @@
   "latitude":"Latitude",
   "longitude":"Longitude",
   "submit":"Submit",
+  "back":"Back",
   "pharmacyDetails": {
     "title": "Pharmacy Details",
     "desc": "Basic pharmacy details",
