--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -34,6 +34,7 @@
     "title": "ايام العمل",
     "desc": "ايام وساعات العمل",
     "subTitle": "ايام وساعات العمل",
+    "sameTime":"نفس ساعات العمل لكل الايام",
     "from":"ساعات العمل - من -",
     "to":"- الي"
   }
